# nhentaio

./: .readthedocs.yml  README.md  pyproject.toml  requirements.txt  setup.py
docs/: pyproject.toml  requirements.txt
docs/source/: changelog.rst  conf.py  index.rst  modules.rst  nhentaio.rst  reference.rst
docs/source/_static/: custom.js  style.css
docs/source/_templates/: genindex.html  layout.html  relations.html
docs/source/extensions/: builder.py  details.py
examples/: basic_details.py  query_builder.py  search.py
nhentaio/: __init__.py  asset.py  asset.pyi  better_enums.py  client.py  client.pyi  enums.py  errors.py  gallery.py  gallery.pyi  http.py  iterators.py  iterators.pyi  query.py  query.pyi  taglike.py
