[tool.poetry]
name = "nhentaio-docs"
version = "0.1.0"
description = ""
authors = ["Kaylynn <mkaylynn7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^3.3.1"
sphinxcontrib-trio = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
